fix introImg on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -245,6 +245,7 @@ hr:not([class])::after {
         margin-left: auto;
         margin-right: auto;
         max-width: 300px;
+        max-height: none;
     }
 
     /* Get rid of the cover image */
